--- a/views/index.html
+++ b/views/index.html
@@ -31,31 +31,31 @@
         <div id="imageSlider" class="carousel slide mt-4" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/travel1.jpg" class="d-block w-100" alt="Victoria falls in Zambia">
+                    <img src="/images/travel1.jpg" class="d-block w-100" alt="Victoria falls in Zambia">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/travel2.jpg" class="d-block w-100" alt="Rhino in a National Park in Kenya">
+                    <img src="/images/travel2.jpg" class="d-block w-100" alt="Rhino in a National Park in Kenya">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/travel3.jpg" class="d-block w-100" alt="Rock church in Lalibela, Ethiopia">
+                    <img src="/images/travel3.jpg" class="d-block w-100" alt="Rock church in Lalibela, Ethiopia">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/travel4.jpg" class="d-block w-100" alt="Kids running behing our car in Uganda">
+                    <img src="/images/travel4.jpg" class="d-block w-100" alt="Kids running behing our car in Uganda">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/travel5.jpg" class="d-block w-100" alt="Pyramids of Giza, Egypt">
+                    <img src="/images/travel5.jpg" class="d-block w-100" alt="Pyramids of Giza, Egypt">
                 </div>
                     <div class="carousel-item">
-                    <img src="images/travel6.jpg" class="d-block w-100" alt="Elephants swimming in sunset in Zambia">
+                    <img src="/images/travel6.jpg" class="d-block w-100" alt="Elephants swimming in sunset in Zambia">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/travel7.jpg" class="d-block w-100" alt="Sossusvlei Namibia">
+                    <img src="/images/travel7.jpg" class="d-block w-100" alt="Sossusvlei Namibia">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/travel8.jpg" class="d-block w-100" alt="Sunset in the Okavango Delta, Botswana">
+                    <img src="/images/travel8.jpg" class="d-block w-100" alt="Sunset in the Okavango Delta, Botswana">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/travel9.jpg" class="d-block w-100" alt="Source of the Nile in Jinja, Uganda">
+                    <img src="/images/travel9.jpg" class="d-block w-100" alt="Source of the Nile in Jinja, Uganda">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#imageSlider" role="button" data-slide="prev">
