--- a/views/ajaxmessage.html
+++ b/views/ajaxmessage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leave a Message (AJAX)</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="/styles.css" rel="stylesheet"> <!-- Link to your custom CSS file -->
+    <link href="/static/styles.css" rel="stylesheet"> <!-- Link to your custom CSS file -->
 </head>
 <body>
     <header class="navbar navbar-expand-lg navbar-light bg-light">
