--- a/views/ajaxmessage.html
+++ b/views/ajaxmessage.html
@@ -77,7 +77,7 @@
     } else {
         document.getElementById('messages').innerHTML = '<div class="alert alert-success">Message sent successfully!</div>';
         document.getElementById('ajaxMessageForm').reset(); // Reset form fields
-        window.location.href = '/guestbook.html'; // Redirect to guestbook.html
+        window.location.href = '/guestbook'; // Redirect to guestbook
     }
 })
 
